Add parser and boxer, start using Promises

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "express": "^4.13.3",
     "jade": "^1.11.0",
-    "multer": "^1.1.0"
+    "multer": "^1.1.0",
+    "promise": "^7.0.4"
   }
 }
